--- a/desktop/folder/start.html
+++ b/desktop/folder/start.html
@@ -3,6 +3,7 @@
    <title>Start</title>
  </head>
 <body>
-  <h1>Hello world! </h1>
+  <h1>Hello GIT! </h1> 
+ <h1>Hello world! </h1>
 </body>
 </html>
